Added SlidingUpPanel and it's basic functionality ---BUGS ARE THERE---

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.orhanobut:logger:2.2.0'
 }
