--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.orhanobut:logger:2.2.0'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
