--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ allprojects {
 
 android {
     compileSdkVersion 26
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "in.ashutoshchaubey.studybuddy"
         minSdkVersion 21
@@ -38,11 +39,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.orhanobut:logger:2.2.0'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.koushikdutta.ion:ion:2.+'
 }
